replace duckdb query with Spark query