@@ -22,16 +22,25 @@ plugins {
 
 repositories {
   mavenCentral()
+  maven {
+    url "https://repository.apache.org/content/repositories/releases/"
+  }
 }
 
 application {
   mainClass = 'io.nimtable.Server'
+  applicationDefaultJvmArgs = [
+    // necessary for Spark to work
+    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED"
+  ]
 }
 
 ext {
   icebergVersion = '1.8.1'
   hadoopVersion = '3.3.6'
   jettyVersion = '11.0.15'
+  sparkVersion = '3.5.1'
 }
 
 dependencies {
@@ -55,7 +64,6 @@ dependencies {
   implementation 'com.google.guava:guava:33.3.0-jre'
 
   implementation 'org.xerial:sqlite-jdbc:3.46.1.0'
-  implementation 'org.duckdb:duckdb_jdbc:1.2.1'
 
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
   implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.2'
@@ -68,6 +76,12 @@ dependencies {
   implementation 'org.slf4j:slf4j-api:2.0.12'
   implementation 'org.slf4j:slf4j-log4j12:2.0.12'
   implementation 'log4j:log4j:1.2.17'
+
+  // Spark dependencies
+  implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
+  implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
+  implementation "org.apache.spark:spark-hive_2.12:${sparkVersion}"
+  implementation "org.apache.iceberg:iceberg-spark-runtime-3.5_2.12:${icebergVersion}"
 }
 
 jar {
